# Orange

./: CMakeLists.txt  README.md
Src/Game/: CMakeLists.txt  Sanbox2D.cpp  Sanbox2D.h  Sandbox.cpp
Src/OrangeEngine/: Application.h  CMakeLists.txt  Orange.h  OrangeExport.h  pch.h
Src/OrangeEngine/Engine/: Application.cpp  Application.h  EntryPoint.h  Log.cpp  Log.h  OrangeExport.h
Src/OrangeEngine/Engine/Core/: Application.cpp  Application.h  EntryPoint.h  GraphicsContext.h  IWindow.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraControler.cpp  OrthographicCameraControler.h  Timestep.h
Src/OrangeEngine/Engine/Debug/: Instrumentor.h
Src/OrangeEngine/Engine/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Src/OrangeEngine/Engine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Src/OrangeEngine/Engine/Renderer/: Buffer.cpp  Buffer.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Src/OrangeEngine/Platform/OpenGL/: ImGuiOpenGLRender.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLPch.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Src/OrangeEngine/Platform/Windows/: WinInput.cpp  WinInput.h  WinWindow.cpp  WinWindow.h
docs/: RenderStruct.drawio
script/: GenerateWithDebugShared.bat  GenerateWithDebugStatic.bat  GenerateWithReleaseShared.bat  GenerateWithReleaseStatic.bat  generate.bat  generateWithDebug.bat  generatewithrelease.bat
